fix menu overlapping content on mobile

--- a/app/assets/stylesheets/semantic.css.scss
+++ b/app/assets/stylesheets/semantic.css.scss
@@ -6,7 +6,7 @@ body {
   margin-right: 1.5em;
 }
 .main.container {
-  margin-top: 4em;
+  //margin-top: 5em;
 }
 .wireframe {
   margin-top: 2em;
@@ -14,4 +14,10 @@ body {
 .ui.footer.segment {
   margin: 5em 0em 0em;
   padding: 5em 0em;
+}
+
+@media all and (max-width: 600px) {
+  .main.container {
+    //margin-top: 20em;
+  }
 }
